[gd_scene load_steps=29 format=3 uid="uid://cemnudrf6i34d"]

[ext_resource type="Texture2D" uid="uid://b1007tuovoteg" path="res://Sunny-land-files/Sunny-land-files/Graphical Assets/spritesheets/enemy-deadth.png" id="1_1wj2e"]
[ext_resource type="Script" path="res://frog.gd" id="1_fbsqh"]
[ext_resource type="Texture2D" uid="uid://cdww4k4ugjsrs" path="res://Sunny-land-files/Sunny-land-files/Graphical Assets/spritesheets/frog-idle.png" id="1_oa8n1"]
[ext_resource type="Texture2D" uid="uid://8g1ll7a3n73e" path="res://Sunny-land-files/Sunny-land-files/Graphical Assets/spritesheets/frog-jump.png" id="2_djkeb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u0bof"]
size = Vector2(23, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_miy4q"]
atlas = ExtResource("1_1wj2e")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kmjl"]
atlas = ExtResource("1_1wj2e")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_0svak"]
atlas = ExtResource("1_1wj2e")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsw1f"]
atlas = ExtResource("1_1wj2e")
region = Rect2(120, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6ws2"]
atlas = ExtResource("1_1wj2e")
region = Rect2(160, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kt2k"]
atlas = ExtResource("1_1wj2e")
region = Rect2(200, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_csmpl"]
atlas = ExtResource("1_oa8n1")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gowpg"]
atlas = ExtResource("1_oa8n1")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lssj"]
atlas = ExtResource("1_oa8n1")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xkgu"]
atlas = ExtResource("1_oa8n1")
region = Rect2(105, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxa7g"]
atlas = ExtResource("2_djkeb")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_crok2"]
atlas = ExtResource("2_djkeb")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmflk"]
atlas = ExtResource("2_djkeb")
region = Rect2(70, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_sjghy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_miy4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kmjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0svak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsw1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6ws2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kt2k")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_csmpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gowpg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lssj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xkgu")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxa7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crok2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmflk")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vsq80"]
radius = 97.0206

[sub_resource type="Animation" id="Animation_5ox2n"]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_quifh"]
resource_name = "Fall"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_8s1k8"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 3]
}

[sub_resource type="Animation" id="Animation_ylxid"]
resource_name = "Jump"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_i0klt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ri8ku"]
_data = {
"Death": SubResource("Animation_5ox2n"),
"Fall": SubResource("Animation_quifh"),
"Idle": SubResource("Animation_8s1k8"),
"Jump": SubResource("Animation_ylxid"),
"RESET": SubResource("Animation_i0klt")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_bj8ky"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r5wdd"]
size = Vector2(31.9325, 16.0749)

[node name="Frog" type="CharacterBody2D"]
scale = Vector2(1.03343, 1.11976)
script = ExtResource("1_fbsqh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 2.5)
shape = SubResource("RectangleShape2D_u0bof")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, 1)
sprite_frames = SubResource("SpriteFrames_sjghy")
animation = &"Idle"
frame = 1

[node name="PlayerDetection" type="Area2D" parent="."]
disable_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_vsq80")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ri8ku")
}

[node name="PlayerDeath" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDeath"]
position = Vector2(0.967649, -7.14436)
scale = Vector2(0.857143, 0.806)
shape = SubResource("CircleShape2D_bj8ky")

[node name="PlayerDamage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDamage"]
position = Vector2(0.483825, 5.35829)
shape = SubResource("RectangleShape2D_r5wdd")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="PlayerDeath" to="." method="_on_player_death_body_entered"]
[connection signal="body_entered" from="PlayerDamage" to="." method="_on_player_damage_body_entered"]
